@@ -21,9 +21,9 @@
             "rct2.scenery_small.tmw",
             "$DAT:0C58B401|IRECTMWC",
             "rct2.scenery_small.tbr3",
-            "$DAT:0C58B301|LMPBRL02",
+            "fidwell.scenery_small.tbr3",
             "rct2.scenery_small.tbr4",
-            "$DAT:0C58B301|LMPBRL01",
+            "fidwell.scenery_small.tbr4",
             "rct2.scenery_small.tmj",
             "$DAT:0C58B401|IRETMJ1C",
             "rct2.footpath_banner.bn5",
