@@ -1,0 +1,44 @@
+{
+    "id": "fidwell.scenery_small.tbr4",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "sourceGame": ["custom"],
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 4,
+        "removalPrice": -3,
+        "cursor": "CURSOR_HOUSE_DOWN",
+        "height": 16,
+        "shape": "1/4",
+        "hasPrimaryColour": true,
+        "isStackable": true
+    },
+    "images": [
+      { "path": "images/0.png", "x": -7, "y": -18 },
+      { "path": "images/1.png", "x": -7, "y": -18 },
+      { "path": "images/2.png", "x": -7, "y": -18 },
+      { "path": "images/3.png", "x": -7, "y": -18 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Barrel",
+            "fr-FR": "Tonneau",
+            "de-DE": "Fass",
+            "es-ES": "Barril",
+            "it-IT": "Barile",
+            "nl-NL": "Vat",
+            "sv-SE": "Tunna",
+            "ko-KR": "통",
+            "zh-CN": "桶",
+            "zh-TW": "桶",
+            "pt-BR": "Barril",
+            "cs-CZ": "Barel",
+            "ja-JP": "樽",
+            "pl-PL": "Beczułka",
+            "ru-RU": "Бочка",
+            "eo-ZZ": "Barelo",
+            "ca-ES": "Barril",
+            "fi-FI": "Tynnyri"
+        }
+    }
+}
